--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <span>Hi</span>
                 <div><span>I'm</span><span>Anastasia</span><span>Hossain</span><h1>Designer</h1></div>
             </div>
-            <canvas class="Scene-stars rellax" data-rellax-speed="-20" role="presentation"></canvas>
+            <canvas class="Scene-stars" role="presentation"></canvas>
             <img class="parallax-img rellax" src="img/one.svg" data-rellax-speed="-6"/>
             <img class="parallax-img rellax" src="img/two.svg" data-rellax-speed="-5"/>
             <img class="parallax-img rellax" src="img/three.svg" data-rellax-speed="-4"/>
