Added GC assets, Added loaders

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <span>Hi</span>
                 <div><span>I'm</span><span>Anastasia</span><span>Hossain</span><h1>Designer</h1></div>
             </div>
-            <canvas class="Scene-stars" role="presentation"></canvas>
+            <canvas class="Scene-stars rellax" data-rellax-speed="-20" role="presentation"></canvas>
             <img class="parallax-img rellax" src="img/one.svg" data-rellax-speed="-6"/>
             <img class="parallax-img rellax" src="img/two.svg" data-rellax-speed="-5"/>
             <img class="parallax-img rellax" src="img/three.svg" data-rellax-speed="-4"/>
@@ -258,6 +258,9 @@
                                     <li><i class="material-icons">check_circle</i>Implemented and animated visually pleasing 404 page to relax consumers during errors</li>
                                     <li><i class="material-icons">check_circle</i>Generated queue prompt animations during loading screens</li>
                                 </ul>
+                                <div class="carousel" data-flickity='{ "imagesLoaded": true, "percentPosition": false, "lazyLoad": true }'>
+                                    <img src="img/greatercommons.gif" />
+                                </div>
                             </div>
                         </li>
                         <li class="work-list-item">
@@ -293,6 +296,9 @@
                                     <img src="img/pizza.gif" />
                                     <img src="img/einstein1.png" />
                                     <img src="img/einstein2.jpg" />
+                                    <img src="img/loader1.gif" />
+                                    <img src="img/loader2.gif" />
+                                    <img src="img/loader3.gif" />
                                 </div>
                             </div>
                         </li>
