--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 <ul>
                                     <li><i class="material-icons">check_circle</i>Received samples to process and analyze using various laboratory equipment such as centrifuges, cycles, filters, multipipettes
                                     and more</li>
-                                    <li><i class="material-icons">check_circle</i>Conduct tests on samples through regulated and adhering to strict processes</li>
+                                    <li><i class="material-icons">check_circle</i>Conduct regulated tests while adhering strict processes</li>
                                     <li><i class="material-icons">check_circle</i>Handling and storing of chemicals, gases and other materials</li>
                                     <li><i class="material-icons">check_circle</i>Documenting procedures and establishing and monitoring routines to ensure accuracy of laboratory results</li>
                                     <li><i class="material-icons">check_circle</i>Set up, clean and maintain laboratory equipment</li>
