--- a/index.html
+++ b/index.html
@@ -222,14 +222,10 @@
                             </label>
                             <div class="expanded">
                                 <ul>
-                                    <li><i class="material-icons">check_circle</i>Sketched out and illustrated complex medical
-                                        imagery from chemical maps to diagrams</li>
-                                    <li><i class="material-icons">check_circle</i>Consulted with client on brand identity to
-                                        create logos, icons and graphical backgrounds digitally altered by various mediums</li>
-                                    <li><i class="material-icons">check_circle</i>Animated queue prompts and loading screens</li>
-                                    <li><i class="material-icons">check_circle</i>Discussed business and brand awareness through
-                                        atheistic by suggesting soothing colour palettes and implementing them through HTML
-                                    </li>
+                                    <li><i class="material-icons">check_circle</i>Used photomaniplulation mediums to create dynamic imagery and digital story of concept of brand</li>
+                                    <li><i class="material-icons">check_circle</i>Utlitlized logo and imagery with buisness tools during promotional or client meetings to stimulate visual concepts of objectivess</li>
+                                    <li><i class="material-icons">check_circle</i>Created medical illustrations for internal use to showcase recent objectives and results</li>
+                                    <li><i class="material-icons">check_circle</i>Implemented design of user interface while closely working with devolper to bring out simple but effective flow of education and obeservations</li>
                                 </ul>
                                 <div class="carousel" data-flickity='{ "imagesLoaded": true, "percentPosition": false, "lazyLoad": true }'>
                                     <img src="img/inmed1.jpg" />
