--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="welcome">
                 <span>Hi</span>
-                <div><span>I'm</span><span>Anastasia</span><span>Hossain</span><h1>Designer</h1></div>
+                <div><span>I'm</span><span>Anastasia</span><span>Ostaskova</span><h1>Designer</h1></div>
             </div>
             <canvas class="Scene-stars" role="presentation"></canvas>
             <img class="parallax-img rellax" src="img/one.svg" data-rellax-speed="-6"/>
