--- a/index.html
+++ b/index.html
@@ -258,6 +258,31 @@
                             </div>
                         </li>
                         <li class="work-list-item">
+                            <input type="checkbox" class="checkbox" id="mock-checkbox">
+                            <label for="mock-checkbox" class="work-list-click">
+                                <div class="work-inner">
+                                    <h2 class="work-title">Page Mockups and Components</h2>
+                                    <span class="work-detail work-role">Animator, Illustrator</span>
+                                    <span class="work-detail work-company"></span>
+                                    <span class="work-detail work-date">∞</span>
+                                </div>
+                            </label>
+                            <div class="expanded">
+                                <ul>
+                                    <li><i class="material-icons">check_circle</i>Random mockups and components for each to show off skill</li>
+                                </ul>
+                                <div class="carousel" data-flickity='{ "imagesLoaded": true, "percentPosition": false, "lazyLoad": true }'>
+                                    <img src="img/bankoftamrielfull.png" />
+                                    <img src="img/bankoftamrielcomponents.png" />
+                                    <img src="img/collegeofwinterhold.png" />
+                                    <img src="img/collegeofwinterholdcomponents.png" />
+                                    <img src="img/skybnb.png" />
+                                    <img src="img/skybnbcomponents.png" />
+                                    <img src="img/components.png" />
+                                </div>
+                            </div>
+                        </li>
+                        <li class="work-list-item">
                             <input type="checkbox" class="checkbox" id="misc-checkbox">
                             <label for="misc-checkbox" class="work-list-click">
                                 <div class="work-inner">
