removed pepe images, added a couple more, spelling error

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               and 3d modeler with a background in biology and fintech. In the
               digital age, the ability to digest massive amounts of data very
               quickly but also in a seamless and fun way is an integral part of
-              any business, software and life. My Subtle colour changes, to
+              any business, software and life. My subtle colour changes, to
               where components are within the software, to typography and
               optimization of data are all skills that highly compliment my
               illustrations and animations that are fun, unique, memorable and
@@ -166,9 +166,13 @@
                   <img src="img/phone/transv2 min.png" />
                   <img src="img/phone/wakanda fiw.png" />
                   <img src="img/illustrations/concept1.png" />
+                  <img src="img/illustrations/tradeui.PNG" />
                   <img src="img/animations/animated (3).png" />
                   <img src="img/animations/animated.png" />
                   <img src="img/animations/animated2.png" />
+                  <img
+                    src="img/animations/Convert GIF (small size required).gif"
+                  />
                   <img src="img/animations/carddec.png" />
                   <video
                     autoplay
@@ -257,8 +261,6 @@
                   <img src="img/rengar.gif" />
                   <img src="img/maggot.gif" />
                   <img src="img/pizza.gif" />
-                  <img src="img/einstein1.png" />
-                  <img src="img/einstein2.jpg" />
                   <img src="img/loader1.gif" />
                   <img src="img/loader2.gif" />
                   <img src="img/loader3.gif" />
