--- a/index.html
+++ b/index.html
@@ -79,18 +79,19 @@
           <div class="card">
             <p
               >I’m a Vancouver based UX and UI designer, illustrator, animator
-              and 3d modeler with a background in biology and fintech. In the
+              and 3d modeller with a background in biology and fintech. In the
               digital age, the ability to digest massive amounts of data very
               quickly but also in a seamless and fun way is an integral part of
-              any business, software and life. My subtle colour changes, to
-              where components are within the software, to typography and
-              optimization of data are all skills that highly compliment my
-              illustrations and animations that are fun, unique, memorable and
-              will evoke the emotions your business wants to convey to it’s
-              consumers. Create a brand with me, update your company’s existing
-              style guide with creative changes, or dive into your data and
-              market research to develop your business into something truly
-              inventive and interactive.
+              any business, software and life. User experience goes hand and
+              hand with efficient user interfaces that have subtle colour
+              psychology, precise organization of components, and optimization
+              of massive data. These are skills that compliment my illustrations
+              and animations that are fun, unique, memorable and will evoke the
+              emotions your business wants to convey to its consumers. So create
+              a brand with me, update your company’s existing style guide with
+              creative changes, or dive into your data and market research to
+              develop your business into something truly inventive and
+              interactive.
             </p>
           </div>
         </div>
@@ -283,6 +284,9 @@
         </div>
       </div>
       <footer>
+        <div class="quote"
+          >'greatness' exists in the inconspicuous and over looked details.</div
+        >
         <img src="img/six.svg" />
       </footer>
     </div>
