fixed quote css

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         </div>
       </div>
       <footer>
-        <div class="quote"
+        <div class="hehe"
           >'greatness' exists in the inconspicuous and over looked details.</div
         >
         <img src="img/six.svg" />
