--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
                     loop
                     preload
                     controls
+                    muted
                     src="img/animations/finallargecut.mp4"
                   ></video>
                 </div>
