--- a/index.html
+++ b/index.html
@@ -229,6 +229,23 @@
                   <span class="work-detail work-role">Web Designer</span>
                   <span class="work-detail work-company"></span>
                   <span class="work-detail work-date">2012-2013</span>
+ <div
+                  class="carousel"
+                  data-flickity='{ "imagesLoaded": true, "percentPosition": false, "lazyLoad": true }'
+                >
+                  <img src="img/assam/assam-01.jpg" />
+                  <img src="img/assam/assam-02.jpg" />
+                  <img src="img/assam/assam-03.jpg" />
+                  <img src="img/assam/assam-04.jpg" />
+                  <img src="img/assam/assam-05.jpg" />
+                  <img src="img/assam/assam-06.jpg" />
+                  <img src="img/assam/assam-07.jpg" />
+                  <img src="img/assam/assam-08.jpg" />
+                  <img src="img/assam/assam-09.jpg"/>
+                  <img src="img/assam/assam-10.jpg" />
+                  <img src="img/assam/assam-11.jpg" />
+                  <img src="img/assam/assam-12.jpg" />
+                   <div class="work-container">
                 </div>
               </label>
             </li>
