--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
                   <span class="work-detail work-date">2013-2014</span>
                 </div>
               </label>
+              <div class="expanded">
             </li>
             <li class="work-list-item assam">
               <label for="assam-checkbox" class="work-list-click">
