--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                   <img src="img/assam/assam-10.jpg" />
                   <img src="img/assam/assam-11.jpg" />
                   <img src="img/assam/assam-12.jpg" />
-                 
+                  </div>
                 </div>
               </label>
             </li>
