fixed expanded section

--- a/index.html
+++ b/index.html
@@ -221,16 +221,20 @@
                   <span class="work-detail work-date">2013-2014</span>
                 </div>
               </label>
-            
             </li>
             <li class="work-list-item assam">
-              <label for="assam-checkbox" class="work-list-click">
+              <input type="checkbox" class="checkbox" id="einstein-checkbox" />
+              <label for="einstein-checkbox" class="work-list-click">
                 <div class="work-inner">
                   <h2 class="work-title">Assam Tea Company</h2>
                   <span class="work-detail work-role">Web Designer</span>
                   <span class="work-detail work-company"></span>
                   <span class="work-detail work-date">2012-2013</span>
-  <div class="expanded">
+                </div>
+              </label>
+
+              <div class="expanded">
+                <div
                   class="carousel"
                   data-flickity='{ "imagesLoaded": true, "percentPosition": false, "lazyLoad": true }'
                 >
@@ -242,13 +246,12 @@
                   <img src="img/assam/assam-06.jpg" />
                   <img src="img/assam/assam-07.jpg" />
                   <img src="img/assam/assam-08.jpg" />
-                  <img src="img/assam/assam-09.jpg"/>
+                  <img src="img/assam/assam-09.jpg" />
                   <img src="img/assam/assam-10.jpg" />
                   <img src="img/assam/assam-11.jpg" />
                   <img src="img/assam/assam-12.jpg" />
-                  </div>
                 </div>
-              </label>
+              </div>
             </li>
             <li class="work-list-item personal">
               <input type="checkbox" class="checkbox" id="misc-checkbox" />
