--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
               </label>
             </li>
             <li class="work-list-item assam">
-              <input type="checkbox" class="checkbox" id="einstein-checkbox" />
-              <label for="einstein-checkbox" class="work-list-click">
+              <input type="checkbox" class="checkbox" id="assam-checkbox" />
+              <label for="assam-checkbox" class="work-list-click">
                 <div class="work-inner">
                   <h2 class="work-title">Assam Tea Company</h2>
                   <span class="work-detail work-role">Web Designer</span>
