added images for the rest of the sections

--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
               </div>
             </li>
             <li class="work-list-item inmed">
+              <input type="checkbox" class="checkbox" id="inmed-checkbox" />
               <label for="inmed-checkbox" class="work-list-click">
                 <div class="work-inner">
                   <h2 class="work-title">InMed</h2>
@@ -197,8 +198,24 @@
                   <span class="work-detail work-date">2015-2017</span>
                 </div>
               </label>
+              <div class="expanded">
+                <div
+                  class="carousel"
+                  data-flickity='{ "imagesLoaded": true, "percentPosition": false, "lazyLoad": true }'
+                >
+                  <img src="img/inmed/inmed1.jpg" />
+                  <img src="img/inmed/inmed2.jpg" />
+                  <img src="img/inmed/inmed3.jpg" />
+                  <img src="img/inmed/inmed4.jpg" />
+                  <img src="img/inmed/inmed5.jpg" />
+                  <img src="img/inmed/inmed6.jpg" />
+                  <img src="img/inmed/inmed7.jpg" />
+                  <img src="img/inmed/inmed8.jpg" />
+                </div>
+              </div>
             </li>
             <li class="work-list-item pramana">
+              <input type="checkbox" class="checkbox" id="pramana-checkbox" />
               <label for="pramana-checkbox" class="work-list-click">
                 <div class="work-inner">
                   <h2 class="work-title">Pramana Pharmaceuticals</h2>
@@ -209,8 +226,17 @@
                   <span class="work-detail work-date">2014-2015</span>
                 </div>
               </label>
+              <div class="expanded">
+                <div
+                  class="carousel"
+                  data-flickity='{ "imagesLoaded": true, "percentPosition": false, "lazyLoad": true }'
+                >
+                  <img src="img/pramana/pramana1.png" />
+                </div>
+              </div>
             </li>
             <li class="work-list-item vidigami">
+              <input type="checkbox" class="checkbox" id="vidigami-checkbox" />
               <label for="vidigami-checkbox" class="work-list-click">
                 <div class="work-inner">
                   <h2 class="work-title">Vidigami Media</h2>
@@ -221,6 +247,31 @@
                   <span class="work-detail work-date">2013-2014</span>
                 </div>
               </label>
+              <div class="expanded">
+                <div
+                  class="carousel"
+                  data-flickity='{ "imagesLoaded": true, "percentPosition": false, "lazyLoad": true }'
+                >
+                  <img src="img/vidigami/vidigami1.png" />
+                  <img src="img/vidigami/vidigami2.png" />
+                  <img src="img/vidigami/vidigami3.png" />
+                  <img src="img/vidigami/vidigami4.png" />
+                  <img src="img/vidigami/vidigami5.png" />
+                  <img src="img/vidigami/vidigami6.png" />
+                  <img src="img/vidigami/vidigami7.png" />
+                  <img src="img/vidigami/vidigami8.png" />
+                  <img src="img/vidigami/vidigami9.png" />
+                  <img src="img/vidigami/vidigami10.png" />
+                  <img src="img/vidigami/vidigami11.png" />
+                  <img src="img/vidigami/vidigami12.png" />
+                  <img src="img/vidigami/vidigami13.png" />
+                  <img src="img/vidigami/vidigami14.png" />
+                  <img src="img/vidigami/vidigami15.png" />
+                  <img src="img/vidigami/vidigami16.png" />
+                  <img src="img/vidigami/vidigami17.png" />
+                  <img src="img/vidigami/vidigami18.png" />
+                </div>
+              </div>
             </li>
             <li class="work-list-item assam">
               <input type="checkbox" class="checkbox" id="assam-checkbox" />
