--- a/index.html
+++ b/index.html
@@ -78,20 +78,7 @@
           <img src="img/portrait.png" />
           <div class="card">
             <p
-              >I’m a Vancouver based UX and UI designer, illustrator, animator
-              and 3d modeller with a background in biology and fintech. In the
-              digital age, the ability to digest massive amounts of data very
-              quickly but also in a seamless and fun way is an integral part of
-              any business, software and life. User experience goes hand and
-              hand with efficient user interfaces that have subtle colour
-              psychology, precise organization of components, and optimization
-              of massive data. These are skills that compliment my illustrations
-              and animations that are fun, unique, memorable and will evoke the
-              emotions your business wants to convey to its consumers. So create
-              a brand with me, update your company’s existing style guide with
-              creative changes, or dive into your data and market research to
-              develop your business into something truly inventive and
-              interactive.
+              >I’m a Vancouver based UX and UI designer, illustrator, animator and 3d modeller with a background in technology, crypto and fintech. In the digital age, the ability to digest massive amounts of data very quickly but also in a seamless and fun way is an integral part of any business, software and life. User experience goes hand and hand with efficient user interfaces that have subtle colour psychology, precise organization of components, and optimization of massive data. These are skills that compliment my illustrations and animations that are fun, unique, memorable and will evoke the emotions your business wants to convey to its consumers. So, create a brand with me, update your company’s existing style guide with creative changes, or dive into your data and market research to develop your business into something truly inventive and interactive.
             </p>
           </div>
         </div>
@@ -183,34 +170,6 @@
                     muted
                     src="img/animations/finallargecut.mp4"
                   ></video>
-                </div>
-              </div>
-            </li>
-            <li class="work-list-item inmed">
-              <input type="checkbox" class="checkbox" id="inmed-checkbox" />
-              <label for="inmed-checkbox" class="work-list-click">
-                <div class="work-inner">
-                  <h2 class="work-title">InMed</h2>
-                  <span class="work-detail work-role"
-                    >Visual Designer, Illustrator</span
-                  >
-                  <span class="work-detail work-company"></span>
-                  <span class="work-detail work-date">2015-2017</span>
-                </div>
-              </label>
-              <div class="expanded">
-                <div
-                  class="carousel"
-                  data-flickity='{ "imagesLoaded": true, "percentPosition": false, "lazyLoad": true }'
-                >
-                  <img src="img/inmed/inmed1.jpg" />
-                  <img src="img/inmed/inmed2.jpg" />
-                  <img src="img/inmed/inmed3.jpg" />
-                  <img src="img/inmed/inmed4.jpg" />
-                  <img src="img/inmed/inmed5.jpg" />
-                  <img src="img/inmed/inmed6.jpg" />
-                  <img src="img/inmed/inmed7.jpg" />
-                  <img src="img/inmed/inmed8.jpg" />
                 </div>
               </div>
             </li>
