--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
           <i class="contact-email material-icons">email</i>
           <h2
             >Email me at
-            <a href="mailto:hossain.anastasia@gmail.com">
-              <strong>hossain.anastasia</strong>@ <strong>gmail</strong>.com</a
+            <a href="mailto:warbeak.designs@gmail.com">
+              <strong>warbeak.designs</strong>@ <strong>gmail</strong>.com</a
             >
           </h2>
         </div>
