--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         <a class="anchor-link" data-scroll href="#contact">Contact</a>
       </div>
       <div class="welcome">
-        <span>Hi</span>
+        <span>Elevate Your Design Impact</span>
         <div>
-          <span>I'm</span>
-          <span>Anastasia</span>
-          <span>Ostaskova</span>
-          <h1>Designer</h1>
+          <span></span>
+          <span>Let Your Projects Take Wing with Our Creative Expertise</span>
+          <!-- <span>Ostaskova</span> -->
+          <h1>With Warbeak Designs</h1>
         </div>
       </div>
       <canvas class="Scene-stars" role="presentation"></canvas>
@@ -91,12 +91,12 @@
               <input type="checkbox" class="checkbox" id="willow-checkbox" />
               <label for="willow-checkbox" class="work-list-click">
                 <div class="work-inner">
-                  <h2 class="work-title">Willowx Analytics</h2>
+                  <h2 class="work-title">Autozen</h2>
                   <span class="work-detail work-role"
-                    >UX/UI Designer & illustrator, Consultant</span
+                    >UX/UI Designer</span
                   >
                   <span class="work-detail work-company"></span>
-                  <span class="work-detail work-date">2020-current</span>
+                  <span class="work-detail work-date">Jan 2021 - Dec 2021</span>
                 </div>
               </label>
               <div class="expanded">
@@ -104,8 +104,24 @@
                   class="carousel"
                   data-flickity='{ "imagesLoaded": true, "percentPosition": false, "lazyLoad": true }'
                 >
-                  <img src="img/willowx/willowxinsta_resize_update.png" />
-                  <img src="img/willowx/willowxinsta1_resize_update.png" />
+                  <!-- <img src="img/willowx/willowxinsta_resize_update.png" />
+                  <img src="img/willowx/willowxinsta1_resize_update.png" /> -->
+                  <img src="img/autozen/1.png" />
+                  <img src="img/autozen/2.mobile.png" />
+                  <img src="img/autozen/2.png" />
+                  <img src="img/autozen/3.png" />
+                  <img src="img/autozen/4.mobile.png" />
+                  <img src="img/autozen/4.png" />
+                  <img src="img/autozen/4iphonex.png" />
+                  <img src="img/autozen/5.png" />
+                  <img src="img/autozen/6.png" />
+                  <img src="img/autozen/7.png" />
+                  <img src="img/autozen/8.png" />
+                  <img src="img/autozen/9.png" />
+                  <img src="img/autozen/10.png" />
+                  <img src="img/autozen/11.png" />
+                  <img src="img/autozen/12.png" />
+                  <img src="img/autozen/13.png" />
                 </div>
               </div>
             </li>
@@ -113,12 +129,12 @@
               <input type="checkbox" class="checkbox" id="rentmoola-checkbox" />
               <label for="rentmoola-checkbox" class="work-list-click">
                 <div class="work-inner">
-                  <h2 class="work-title">RentMoola</h2>
+                  <h2 class="work-title">Letus (previously RentMoola)</h2>
                   <span class="work-detail work-role"
-                    >Creative Director, Lead UX & UI Designer</span
+                    >Creative Director</span
                   >
                   <span class="work-detail work-company"></span>
-                  <span class="work-detail work-date">2019-2020</span>
+                  <span class="work-detail work-date">Nov 2019 - Jan 2021</span>
                 </div>
               </label>
               <div class="expanded">
@@ -151,10 +167,10 @@
                 <div class="work-inner">
                   <h2 class="work-title">Einstein Exchange</h2>
                   <span class="work-detail work-role"
-                    >Chief Design Officer, UX & UI Designer</span
+                    >Creative Director/Lead UX-UI Designer</span
                   >
                   <span class="work-detail work-company"></span>
-                  <span class="work-detail work-date">2017-2019</span>
+                  <span class="work-detail work-date">Sep 2017 - Oct 2019</span>
                 </div>
               </label>
               <div class="expanded">
@@ -237,10 +253,10 @@
                 <div class="work-inner">
                   <h2 class="work-title">Entourage Biosciences</h2>
                   <span class="work-detail work-role"
-                    >Graphic & UX/UI Designer </span
+                    >UX/UI Designer and Illustrator</span
                   >
                   <span class="work-detail work-company"></span>
-                  <span class="work-detail work-date">2016-2017</span>
+                  <span class="work-detail work-date">Jan 2016 - Aug 2017</span>
                 </div>
               </label>
             </li>
@@ -250,10 +266,10 @@
                 <div class="work-inner">
                   <h2 class="work-title">Pramana Pharmaceuticals</h2>
                   <span class="work-detail work-role"
-                    >Designer, Illustrator, Web Designer</span
+                    >Graphic Designer and Illustrator</span
                   >
                   <span class="work-detail work-company"></span>
-                  <span class="work-detail work-date">2014-2015</span>
+                  <span class="work-detail work-date">Aug 2014 - Dec 2015</span>
                 </div>
               </label>
             </li>
@@ -263,10 +279,10 @@
                 <div class="work-inner">
                   <h2 class="work-title">Vidigami Media</h2>
                   <span class="work-detail work-role"
-                    >Designer, Illustrator, Web Designer</span
+                    >UX/UI Designer</span
                   >
                   <span class="work-detail work-company"></span>
-                  <span class="work-detail work-date">2013-2014</span>
+                  <span class="work-detail work-date">Jan 2013 - July 2014</span>
                 </div>
               </label>
             </li>
