--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
             <img src="img/willowx/willowxinsta_resize_update.png" />
             <img src="img/rentmoola/rentmoola13.gif" />
             <img src="img/willowx/willowxinsta1_resize_update.png" />
+            <img src="img/frontpage1.png" />
+            <img src="img/frontpage2.png" />
+            <img src="img/frontpage3.png" />
           </div>
       </div>
       <div class="hehe2">
