--- a/work.html
+++ b/work.html
@@ -190,7 +190,7 @@
                         </label>
                     </li>
                     <li class="work-list-item vidigami">
-                        <!-- <input type="checkbox" class="checkbox" id="vidigami-checkbox" /> -->
+                        <input type="checkbox" class="checkbox" id="vidigami-checkbox" />
                         <label for="vidigami-checkbox" class="work-list-click">
                             <div class="work-inner">
                                 <h2 class="work-title">Vidigami Media</h2>
@@ -199,6 +199,29 @@
                                 <span class="work-detail work-date">Jan 2013 - July 2014</span>
                             </div>
                         </label>
+                        <div class="expanded">
+                            <div class="carousel"
+                                data-flickity='{ "imagesLoaded": true, "percentPosition": false, "lazyLoad": true }'>
+                                <img src="img/vidigami/vidigami1.png" />
+                                <img src="img/vidigami/vidigami2.png" />
+                                <img src="img/vidigami/vidigami3.png" />
+                                <img src="img/vidigami/vidigami4.png" />
+                                <img src="img/vidigami/vidigami5.png" />
+                                <img src="img/vidigami/vidigami6.png" />
+                                <img src="img/vidigami/vidigami7.png" />
+                                <img src="img/vidigami/vidigami8.png" />
+                                <img src="img/vidigami/vidigami9.png" />
+                                <img src="img/vidigami/vidigami10.png" />
+                                <img src="img/vidigami/vidigami11.png" />
+                                <img src="img/vidigami/vidigami12.png" />
+                                <img src="img/vidigami/vidigami13.png" />
+                                <img src="img/vidigami/vidigami14.png" />
+                                <img src="img/vidigami/vidigami15.png" />
+                                <img src="img/vidigami/vidigami16.png" />
+                                <img src="img/vidigami/vidigami17.png" />
+                                <img src="img/vidigami/vidigami18.png" />
+                            </div>
+                        </div>
                     </li>
                     <li class="work-list-item personal">
                         <input type="checkbox" class="checkbox" id="misc-checkbox" />
