--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
       </div>
       <div>
-          <div class="carousel" data-flickity='{ "imagesLoaded": true, "percentPosition": false, "lazyLoad": true, "wrapAround": true, "autoPlay": true, "cellAlign": "left" }'>
+          <div class="carousel" data-flickity='{ "imagesLoaded": true, "percentPosition": false, "lazyLoad": true, "wrapAround": true, "autoPlay": true, "cellAlign": "center", "contain": true }'>
             <img src="img/willowx/willowxinsta_resize_update.png" />
             <img src="img/rentmoola/rentmoola13.gif" />
             <img src="img/willowx/willowxinsta1_resize_update.png" />
