--- a/work.html
+++ b/work.html
@@ -147,7 +147,7 @@
                         </label>
                         <div class="expanded">
                             <div class="carousel"
-                                data-flickity='{ "imagesLoaded": true, "percentPosition": false, "lazyLoad": true }'>
+                                data-flickity='{ "imagesLoaded": true, "percentPosition": false, "lazyLoad": true, "adaptiveHeight": true }'>
                                 <img src="img/phone/Bitcoin selected.png" />
                                 <img src="img/phone/dashboard v1.PNG" />
                                 <img src="img/phone/pre sign in.png" />
