updated margins for main intro

--- a/work.html
+++ b/work.html
@@ -28,9 +28,9 @@
         <div class="welcome">
             <span>Hi</span>
             <div>
-                <span></span>
-                <span>Anastasia Ostaskova</span>
-                <!-- <span>Ostaskova</span> -->
+                <span>I'm</span>
+                <span>Anastasia</span>
+                <span>Ostaskova</span>
                 <h1>UX/UI Designer</h1>
             </div>
         </div>
