--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <span>Elevate Your Design Impact</span>
         <div>
           <span></span>
+          <span></span>
           <span>Let Your Projects Take Wing with Our Creative Expertise</span>
-          <!-- <span>Ostaskova</span> -->
           <h1>With Warbeak Designs</h1>
         </div>
       </div>
