--- a/work.html
+++ b/work.html
@@ -269,6 +269,6 @@
     </div>
 </body>
 <script src="js/website.js"></script>
-<script src="js/flickity.pkgd.min.js"></script>
+<script src="js/flickity1.pkgd.min.js"></script>
 
 </html>
